// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Section /> renders correcty 1`] = `
<div
  className="anchor-offset text-center"
  id="opinion-type--slug"
>
  <div
    className="opinion-type__title level--0"
  >
    title
    <br />
    <span
      className="small excerpt"
    >
      subtitle
    </span>
  </div>
  <WYSIWYGRender
    className="opinion-type__description"
    value="description"
  />
  <div
    className="mt-15"
  >
    <ForwardRef(Relay(injectIntl(OpinionList)))
      consultation={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
        }
      }
      enablePagination={false}
      section={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "contribuable": true,
          "contributionsCount": 0,
          "description": "description",
          "slug": "slug",
          "subtitle": "subtitle",
          "title": "title",
        }
      }
    />
  </div>
</div>
`;

exports[`<Section /> renders nothing when hide section 1`] = `
<div
  className="anchor-offset text-center"
  id="opinion-type--slug"
>
  <div
    className="opinion-type__title level--0"
  >
    title
    <br />
    <span
      className="small excerpt"
    >
      subtitle
    </span>
  </div>
  <WYSIWYGRender
    className="opinion-type__description"
    value="description"
  />
</div>
`;

exports[`<Section /> renders nothing when section not contribuable 1`] = `
<div
  className="anchor-offset text-center"
  id="opinion-type--slug"
>
  <div
    className="opinion-type__title level--0"
  >
    title
    <br />
    <span
      className="small excerpt"
    >
      subtitle
    </span>
  </div>
  <WYSIWYGRender
    className="opinion-type__description"
    value="description"
  />
</div>
`;
